FullCalendar 7.x-2.x, xxxx-xx-xx
--------------------------------
#1132472 by tim.plunkett: Allow changing Time display in Month View.
#1081488 by tim.plunkett: Fix calculation of the views dom id.
#1131028 by tim.plunkett: Add API documentation.
#1131028 by aspilicious, tim.plunkett: Replace theme_fullcalendar_classname with hook and alter.
#1130950 by tim.plunkett: Fix strict OO compatibility for fullcalendar_handler_area_empty::render().
#1003602 by tim.plunkett: Follow-up with renaming fullcalendar_handler_area_empty.
#1125264 by aspilicious, tim.plunkett: Improved compatibility with new Views UI.
#1124882 by tim.plunkett: Fixed notices caused by Google Calendar options.
#1050530 by aspilcious: Window layout fix.
#1041068 by geerlingguy: Add default menu item to help sub-modules.

FullCalendar 7.x-2.0-alpha2, 2011-03-15
---------------------------------------
#1003602 by tim.plunkett: Rename and reorganize files.
#1063714 by tim.plunkett: Fix error when checking for editable.
#1062656 by tim.plunkett: Remove usage of entity_id_N.
#981522 follow-up by aspilicious: Removed hacks from Google Calendar integration.
#1061546 by tim.plunkett: Support using only Google Calendar.

FullCalendar 7.x-2.0-alpha2, 2011-02-13
---------------------------------------
#1033010 follow-up by tim.plunkett: Provide a default view as an example.
#1049080 follow-up by tim.plunkett: Support non-Field API fields and relationships.
#1045114 by aspilicious: Cleaned up interface strings.
#1055978 by tim.plunkett: Support multiple calendars per page.
#1057156 by aspilicious: Hide row style date fields until date fields are added.
#981522 by aspilicious, tim.plunkett, xjolanx007: Added Google Calendar integration.
#1049080 by tim.plunkett: Support non-Field API fields and relationships.
#1050530 by aspilicious: Added customizable window target.
#1049028 by tim.plunkett: Removed theme_fullcalendar_link().